--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@giphy/js-fetch-api": "^3.0.0",
+    "@types/styled-components": "^5.1.9",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.13.12",
+    "styled-components": "^5.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.0",
+    "@types/react": "^17.0.4",
+    "typescript": "^4.2.4"
   }
 }
