--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next export",
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@giphy/js-fetch-api": "^3.0.0",
@@ -15,7 +16,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.13.12",
-    "styled-components": "^5.2.3"
+    "react-tsparticles": "^1.26.4",
+    "styled-components": "^5.2.3",
+    "tsparticles-shape-confetti": "^1.11.3"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
