--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next export",
+    "build": "export",
     "start": "next start",
     "export": "next build && next export"
   },
