--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
     "react-query": "^3.13.12",
-    "react-tsparticles": "^1.26.4",
-    "styled-components": "^5.2.3",
-    "tsparticles-shape-confetti": "^1.11.3"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
