--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@giphy/js-fetch-api": "^3.0.0",
     "@types/styled-components": "^5.1.9",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "10.1.3",
-    "react": "17.0.2",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
     "react-confetti": "^6.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.13.12",
     "styled-components": "^5.2.3"
   },
