--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@giphy/js-fetch-api": "^3.0.0",
+    "@radix-ui/react-progress": "^0.1.0",
     "@types/styled-components": "^5.1.9",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^11.1.2",
